# arm_toolchain_cmake_conan_example

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  aarch64-linux-gnu.cmake  amd64.Makefile  armv8.Makefile  docker-compose.yml  gcc10-aarch64-none-linux-gnu.profile  gcc10-amd64-linux.cmake  gcc10-amd64-linux.profile  gcc8.cmake  gcc8.profile  linaro-linux-gcc-aarch64.cmake  linaro.cmake  linaro.profile  status
src/: main.cpp
src/vg_status/: main.cpp  vg_status.cpp
